rke2-artifacts/prometheus/prometheus-dev.yml
# Deploys a new Namespace for Prometheus
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
  labels:
    name: prometheus
---
# Deploys Prometheus in the Prometheus Namespace
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - name: prometheus
        image: docker.io/prom/prometheus
        args:
        - "--config.file=/etc/prometheus/prometheus.yml"
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config
          mountPath: /etc/prometheus
      volumes:
      - name: prometheus-config
        configMap:
          name: prometheus-config
---
# Service to expose Prometheus
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: prometheus
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
