rke2-artifacts/prometheus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure" # Use "web" for HTTP, "websecure" for HTTPS
    traefik.ingress.kubernetes.io/router.tls: "true"              # Enables HTTPS
spec:
  tls:
  - hosts:
    - prometheus.fqdn-control.udev.local
    secretName: prometheus-tls-secret   # Secret for your TLS certificate
  rules:
  - host: prometheus.fqdn-control.udev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
